--- a/Python_developer_certificate_Udemy.ipynb
+++ b/Python_developer_certificate_Udemy.ipynb
@@ -4,8 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "mount_file_id": "1mvqrlb49NzpIHLnzL8eCFq5apxA0Zts1",
-      "authorship_tag": "ABX9TyOa2n5pAp8uy444JvCqvh/c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,7 +90,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "test2"
+      ],
       "metadata": {
         "id": "Pmyqs_mAB-yx"
       },
