--- a/Python_developer_certificate_Udemy.ipynb
+++ b/Python_developer_certificate_Udemy.ipynb
@@ -91,7 +91,7 @@
     {
       "cell_type": "code",
       "source": [
-        "test2"
+        "#changing this number to 80, then value inside the 'number' will change"
       ],
       "metadata": {
         "id": "Pmyqs_mAB-yx"
@@ -101,21 +101,37 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "weight = 92"
+      ],
       "metadata": {
         "id": "GXY9qWZqB-9m"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(weight)"
+      ],
       "metadata": {
-        "id": "RDzRMOjqB_Gq"
+        "id": "RDzRMOjqB_Gq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "77983099-e499-4543-9e4f-e6b1099ca5a2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "92\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
