--- a/Python_developer_certificate_Udemy.ipynb
+++ b/Python_developer_certificate_Udemy.ipynb
@@ -4,6 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "mount_file_id": "1mvqrlb49NzpIHLnzL8eCFq5apxA0Zts1",
+      "authorship_tag": "ABX9TyOur7j8awF6RHH91mgNOJY3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +93,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#changing this number to 80, then value inside the 'number' will change"
+        "testing 4"
       ],
       "metadata": {
         "id": "Pmyqs_mAB-yx"
@@ -101,37 +103,21 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "weight = 92"
-      ],
+      "source": [],
       "metadata": {
         "id": "GXY9qWZqB-9m"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(weight)"
-      ],
+      "source": [],
       "metadata": {
-        "id": "RDzRMOjqB_Gq",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "77983099-e499-4543-9e4f-e6b1099ca5a2"
+        "id": "RDzRMOjqB_Gq"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "92\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
