--- a/Python_developer_certificate_Udemy.ipynb
+++ b/Python_developer_certificate_Udemy.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1mvqrlb49NzpIHLnzL8eCFq5apxA0Zts1",
-      "authorship_tag": "ABX9TyOa2n5pAp8uy444JvCqvh/c",
+      "authorship_tag": "ABX9TyPH3KyRUSlUc4KseHeMZB56",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,39 +92,108 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "first_name='imtiaz' #string\n",
+        "last_name =\"ahmad\"\n",
+        "name= first_name + last_name\n",
+        "name"
+      ],
       "metadata": {
-        "id": "Pmyqs_mAB-yx"
+        "id": "Pmyqs_mAB-yx",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "bf22322f-7aa9-4c4a-89a5-fd90d16852e1"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'imtiazahmad'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(first_name,last_name) # print automatically inserts a space here"
+      ],
       "metadata": {
-        "id": "GXY9qWZqB-9m"
+        "id": "GXY9qWZqB-9m",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "68ec58ea-c35b-4a2e-82c7-59005b3a4f6c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "imtiaz ahmad\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(name) "
+      ],
       "metadata": {
-        "id": "RDzRMOjqB_Gq"
+        "id": "RDzRMOjqB_Gq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "11d9bf35-8aaa-4301-ee66-2d6714119ca6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "imtiazahmad\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# write - imtiaz ahmed weigh 200 pounds and 200 will be stored in a variable\n",
+        "weight= 200\n",
+        "sentence= first_name + last_name + \" weighs \" + str(weight) + \" lbs\"\n",
+        "print(sentence)"
+      ],
       "metadata": {
-        "id": "FJReVEu4B_Jg"
+        "id": "FJReVEu4B_Jg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "209817b2-f85a-4112-e104-ef532c35e7c0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "imtiazahmad weighs 200 lbs\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
